--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
-"scripts": {
+{
+  "scripts": {
     "build": "parcel build main.js --out-dir dist --public-url ./"
+  },
+  "devDependencies": {
+    "parcel": "^2.x.x"
+  }
 }
