--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,13 +1,12 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages (Official Actions)
 
 on:
   push:
-    branches: [ main ] # Or your default branch name
+    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,14 +17,23 @@ jobs:
           node-version: 'lts/*'
 
       - name: Install dependencies
-        run: npm install # Or yarn install
+        run: npm install
 
       - name: Build with Parcel
-        run: npm run build # Or yarn build (assuming you have the "build" script in package.json)
+        run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages # The branch where GitHub Pages will be deployed from
-          folder: dist # The output folder from your build process
+          path: ./dist # Your build output directory
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
